...
          maxLength={this.maxLength}
          onChangeText={this.onPinChange}
          ref={inputBox => {
            this.inputBox = inputBox
          }}
          style={styles.input}
          testID="pin-code-input-box"
          accessible={true}
          accessibilityLabel={`pin-code-input-box`}
          value={this.state.pin}
        />
      </CustomView>
    )
...
